// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render Spacer 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-18qivch"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="wp-components-flex-item css-zkdzda"
    data-g2-c16t="true"
    data-g2-component="Spacer"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render alignment 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-l9c4fx"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-1g7sj4q"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;

exports[`props should render spacing 1`] = `
<div
  class="wp-components-flex wp-components-h-stack wp-components-v-stack css-18qivch"
  data-g2-c16t="true"
  data-g2-component="VStack"
>
  <div
    class="css-j1yu9m"
  />
  <div
    class="css-j1yu9m"
  />
</div>
`;
